# chatbox

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
chatbox/: __init__.py  app.py  bot.py
docs/reference/: chatbox.md
tests/: test_add.py  test_bot.py
